--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ repositories {
     mavenCentral()
 }
 
-def restAssured = "4.4.0",
+def restAssured = '4.5.1',
     junitVersion = "5.8.2",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = '1.7.36'
 
 dependencies {
     testImplementation(
             "io.rest-assured:rest-assured:$restAssured",
-            "org.assertj:assertj-core:3.22.0",
+            "org.assertj:assertj-core:3.22.0",  // библиотека проверок ассертов
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:$slf4jVersion",
